# multi_agent

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  building_area_agent122_副本.py  building_area_agent122_副本2.py  command_line_usage.md  docker-compose.yaml  docker-compose.yml  endtoend.ifc  ifc_viewer.py  index.html  multi_agent.py  multi_agent_framework_user_flow.md  nginx_root.conf  supervisord.conf  user_interface_specification.md  user_operation_demo.md  view.html  zeabur.yaml  zeabur.yml  三agent整合技术方案.md  三agent联合框架用户操作流程.md  用户界面设计详细说明.md  项目结构和配置示例.md
alignment_agent/: .gitignore  =0.24.0  Dockerfile  MANIFEST.in  Makefile  README.md  README_NO_KG.md  compare_json_processing.py  config.yaml  debug_alignment.py  debug_ifc_names.py  debug_json_text.py  debug_simple.py  docker-compose.yml  example_new_formats.py  example_no_kg_usage.py  pyproject.toml  requirements.txt  run_agent.py  setup.cfg  setup.py  test_improved_alignment.py  test_no_kg_agent.py
alignment_agent/config/: config.yaml
alignment_agent/core/: __init__.py  fusion_module.py  ifc_semantic_agent.py  ifc_semantic_agent_no_kg.py  semantic_alignment.py
alignment_agent/data_processing/: __init__.py  ifc_processor.py  text_processor.py
alignment_agent/examples/: advanced_alignment.py  basic_usage.py
alignment_agent/knowledge_graph/: __init__.py  entity_resolver.py  graph_builder.py  rag_system.py
alignment_agent/llm/: __init__.py  ner_relation_extractor.py  semantic_extractor.py
alignment_agent/tests/: test_semantic_alignment.py
alignment_agent/text_processing/: __init__.py  regulatory_processor.py
alignment_agent/utils/: __init__.py  config_loader.py  file_utils.py  logger.py
backend/: .gitignore  Dockerfile  area_calculation_report.xlsx  check_vertical_span.py  debug_area_calc.py  debug_output.txt  debug_output_v2.txt  debug_output_v3.txt  debug_output_v4.txt  external_wall.py  ifc_slab_classifier.py  inspect_elements.py  inspect_specific_elements.py  main.py  reproduce_fail.py  requirements.txt  run_debug_viz.py  test_agent_mock.py
backend/agents/: __init__.py  area_calculation_agent.py  regulation_agent.py  semantic_agent.py
bim_agent/: classification_results.json  final_result.json  final_result_a.json  final_result_a_new.json  final_result_a_old.json  final_result_b.json  final_result_b_old.json  final_result_c_new.json  final_result_c_new2.json  final_result_d.json  generate_group_a.py  generate_group_b.py  generate_group_c.py  generate_group_c_view.py  generate_group_d.py  generate_group_d_view_old.py  group_a.rtf  hitl_data.json  main.py  main_a.py  main_c.py  main_no.py  main_old.py  main_test.py  tableConvert.com_A.xlsx  tableConvert.com_B.xlsx  tableConvert.com_C.xlsx  tableConvert.com_D.xlsx  viz.html  ~$tableConvert.com_C.xlsx
boolean/: __init__.py  arc_extractor.py  external_wall.py  ifc_loader.py  improved_curve_extractor.py  outline wall_1.ifc  outline wall_2.ifc  outline wall_3.ifc  overall.ifc  slab_area_calculator.py  visualize_wall_extraction.py  wall_centerline_extractor.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  BIMInterface.jsx  IfcViewer.jsx
logs/: agent_memory.json
regu_agent/: input_pdf.json  llm_regulation_agent.py  llm_regulation_agent_README.md  output-1.json  reg_inputs_example.json  reg_result.json  reg_result.md  regulation_analysis_agent.py  regulation_analysis_agent_README.md  requirements_llm.txt  summary-1.md  summary-1_copy.md
semantic_alignment_agent/: README.md  __init__.py  config.yaml  flowchartTD.py  ifc_regulatory_mapping.md  main.py  requirements.txt  workflow
semantic_alignment_agent/core/: __init__.py  function_inference.py  react_semantic_agent.py  semantic_alignment_agent.py  vertical_space_detector.py
semantic_alignment_agent/data_processing/: __init__.py  ifc_extractor.py  regulation_parser.py
semantic_alignment_agent/dataset/: tableConvert.com_A.xlsx  tableConvert.com_B.xlsx  tableConvert.com_C.xlsx  tableConvert.com_D.xlsx
semantic_alignment_agent/examples/: evaluate_function_inference_confidence.py  example_output.json  example_usage.py  react_agent_example.py
semantic_alignment_agent/geometry/: __init__.py  geometry_analyzer.py
semantic_alignment_agent/llm/: element_classifier.py  llm_client.py  prompt_templates.py
semantic_alignment_agent/logs/: function_eval_details.csv  function_eval_details.json  function_eval_details.txt  function_eval_details.xlsx
semantic_alignment_agent/logs/硬编码映射/: function_eval_details.json  function_eval_details_hardcoding.csv  function_eval_summary.json
semantic_alignment_agent/utils/: __init__.py  config_loader.py  data_structures.py  logger.py  memory.py
